# my_c_template

./: CMakeLists.txt
script/: build.ps1
src/: CMakeLists.txt  main.cpp  test.cpp
src/include/: lib_export.h  test.hpp
tests/: CMakeLists.txt
tests/test_helloworld/: main.cpp
